# test_router

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  manifest.json  service_worker.js
docs/: index.html  test_router.js  test_router_bg.wasm
public/: styles.css
src/: lib.rs  main.rs  router.rs
src/components/: content.rs  mod.rs  sidebar.rs
src/components/pages/: hello.rs  home.rs  mod.rs  not_found.rs
